embedded-bitmap-text-macros/tests/ui/bitmap_font_type_alias_removed_fail.rs
use embedded_bitmap_text::BitmapFont;

fn main() {
    let _font: Option<BitmapFont<'static>> = None;
}
